--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.99.100
-DB_PORT=3307
+DB_HOST=localhost
+DB_PORT=3306
 DB_DATABASE=choho_bd
 DB_USERNAME=choho_user
 DB_PASSWORD=choho@1235
